// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsOverviewWrapper > renders correctly 1`] = `
<div
  class="full-width"
>
  <div
    class="d-flex align-center justify-space-between mb-4"
    id="settings-header"
    style="margin-left: 64px;"
  >
    <div
      class="d-flex align-center"
    >
      <span
        class="text-headline-large"
      >
        Header
      </span>
      
      
      
      
    </div>
    <div>
      
      
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <evocon-v-button-stub
        class="ml-2"
        color="primary"
        disabled="false"
        icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        iconcolor=""
        text="Primary btn"
        textclass=""
        type="primary"
      />
    </div>
  </div>
  <v-card-stub
    border="false"
    class="px-2 py-1 mb-4"
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <settings-filter-bar-stub
      filterconfiguration="[object Map]"
      hideresetbtn="false"
      togglebtnitems=""
      togglebtnvalue="list"
    />
  </v-card-stub>
  
  
</div>
`;

exports[`SettingsOverviewWrapper > renders correctly in mobile view 1`] = `
<div
  class="full-width"
>
  <!--v-if-->
  <v-card-stub
    border="false"
    class="px-2 py-1 mb-4"
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <settings-filter-bar-stub
      filterconfiguration="[object Map]"
      hideresetbtn="false"
      togglebtnitems=""
      togglebtnvalue="list"
    />
  </v-card-stub>
  
  
</div>
`;

exports[`SettingsOverviewWrapper > renders correctly with empty filterConfig 1`] = `
<div
  class="full-width"
>
  <div
    class="d-flex align-center justify-space-between mb-4"
    id="settings-header"
    style="margin-left: 64px;"
  >
    <div
      class="d-flex align-center"
    >
      <span
        class="text-headline-large"
      >
        Header
      </span>
      
      
      
      
    </div>
    <div>
      
      
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <evocon-v-button-stub
        class="ml-2"
        color="primary"
        disabled="false"
        icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        iconcolor=""
        text="Primary btn"
        textclass=""
        type="primary"
      />
    </div>
  </div>
  <v-card-stub
    border="false"
    class="px-2 py-1 mb-4"
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    style="display: none;"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <settings-filter-bar-stub
      filterconfiguration="[object Map]"
      hideresetbtn="false"
      togglebtnitems=""
      togglebtnvalue="list"
    />
  </v-card-stub>
  
  
</div>
`;

exports[`SettingsOverviewWrapper > renders correctly with just one item in menuItems 1`] = `
<div
  class="full-width"
>
  <div
    class="d-flex align-center justify-space-between mb-4"
    id="settings-header"
    style="margin-left: 64px;"
  >
    <div
      class="d-flex align-center"
    >
      <span
        class="text-headline-large"
      >
        Header
      </span>
      
      
      
      
    </div>
    <div>
      
      
      <!--v-if-->
      <icon-with-tooltip-stub
        additionalclasses="mr-2"
        buttonsize="default"
        color=""
        icon="M4 2A2 2 0 0 0 2 4V12H4V8H6V12H8V4A2 2 0 0 0 6 2H4M4 4H6V6H4M22 15.5V14A2 2 0 0 0 20 12H16V22H20A2 2 0 0 0 22 20V18.5A1.54 1.54 0 0 0 20.5 17A1.54 1.54 0 0 0 22 15.5M20 20H18V18H20V20M20 16H18V14H20M5.79 21.61L4.21 20.39L18.21 2.39L19.79 3.61Z"
        iconclickedfn="[Function]"
        iconid=""
        iconsrc=""
        size="16"
        tooltiplocation="top"
        tooltiptext="menu item 1"
      />
      <!--v-if-->
      <evocon-v-button-stub
        class="ml-2"
        color="primary"
        disabled="false"
        icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        iconcolor=""
        text="Primary btn"
        textclass=""
        type="primary"
      />
    </div>
  </div>
  <v-card-stub
    border="false"
    class="px-2 py-1 mb-4"
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <settings-filter-bar-stub
      filterconfiguration="[object Map]"
      hideresetbtn="false"
      togglebtnitems=""
      togglebtnvalue="list"
    />
  </v-card-stub>
  
  
</div>
`;

exports[`SettingsOverviewWrapper > renders correctly with menuItems 1`] = `
<div
  class="full-width"
>
  <div
    class="d-flex align-center justify-space-between mb-4"
    id="settings-header"
    style="margin-left: 64px;"
  >
    <div
      class="d-flex align-center"
    >
      <span
        class="text-headline-large"
      >
        Header
      </span>
      
      
      
      
    </div>
    <div>
      
      
      <v-menu-stub
        activatorprops="[object Object]"
        attach="false"
        capturefocus="true"
        closedelay="250"
        closeonback="true"
        closeoncontentclick="true"
        contained="false"
        disabled="false"
        disableinitialfocus="false"
        eager="false"
        location="bottom right"
        locationstrategy="connected"
        modelvalue="false"
        noclickanimation="false"
        opendelay="300"
        openonhover="false"
        origin="auto"
        persistent="false"
        retainfocus="false"
        scrim="false"
        scrollstrategy="reposition"
        sticktotarget="false"
        submenu="false"
        transition="[object Object]"
        viewportmargin="12"
        zindex="2000"
      >
        <v-list-stub
          activatable="false"
          border="false"
          density="compact"
          disabled="false"
          filterable="false"
          itemchildren="children"
          itemprops="props"
          items=""
          itemsregistration="render"
          itemtitle="title"
          itemtype="type"
          itemvalue="value"
          lines="one"
          mandatory="false"
          nav="false"
          navigationstrategy="focus"
          openstrategy="list"
          returnobject="false"
          selectable="false"
          selectstrategy="single-leaf"
          slim="false"
          tag="div"
          tile="false"
          variant="text"
        >
          
          <v-list-item-stub
            border="false"
            density="default"
            disabled="false"
            exact="false"
            lines="false"
            nav="false"
            replace="false"
            ripple="true"
            slim="false"
            tag="div"
            tile="false"
            variant="text"
          >
            <list-item-contents-stub
              checkbox="false"
              color="primary"
              dense="true"
              disabled="false"
              error="false"
              flagcountrycode=""
              icon="M4 2A2 2 0 0 0 2 4V12H4V8H6V12H8V4A2 2 0 0 0 6 2H4M4 4H6V6H4M22 15.5V14A2 2 0 0 0 20 12H16V22H20A2 2 0 0 0 22 20V18.5A1.54 1.54 0 0 0 20.5 17A1.54 1.54 0 0 0 22 15.5M20 20H18V18H20V20M20 16H18V14H20M5.79 21.61L4.21 20.39L18.21 2.39L19.79 3.61Z"
              iconcolor=""
              iconsize=""
              indeterminate="false"
              inputvalue="false"
              isgroupactivatoritem="false"
              issingleselect="false"
              loading="false"
              primaryhighlight=""
              primarytext="menu item 1"
              secondaryhighlight=""
              secondarytext=""
              tertiaryhighlight=""
              tertiarytext=""
              tertiarytextclasses=""
            />
          </v-list-item-stub>
          <v-list-item-stub
            border="false"
            density="default"
            disabled="false"
            exact="false"
            lines="false"
            nav="false"
            replace="false"
            ripple="true"
            slim="false"
            tag="div"
            tile="false"
            variant="text"
          >
            <list-item-contents-stub
              checkbox="false"
              color="primary"
              dense="true"
              disabled="false"
              error="false"
              flagcountrycode=""
              icon="M21,16C21,15.5 20.95,15.08 20.88,14.68L22.45,13.9L21.55,12.1L20.18,12.79C19.63,11.96 18.91,11.5 18.29,11.28L18.95,9.32L17.05,8.68L16.29,10.96C14.96,10.83 14.17,10.32 13.7,9.77L15.45,8.9L14.55,7.1L13,7.89C12.97,7.59 12.86,6.72 12.28,5.87L13.83,3.55L12.17,2.44L10.76,4.56C10.28,4.33 9.7,4.15 9,4.06V2H7V4.1C6.29,4.25 5.73,4.54 5.32,4.91L2.7,2.29L1.29,3.71L4.24,6.65C4,7.39 4,8 4,8H2V10H4.04C4.1,10.63 4.21,11.36 4.4,12.15L1.68,13.05L2.31,14.95L5,14.05C5.24,14.56 5.5,15.08 5.82,15.58L3.44,17.17L4.55,18.83L7.07,17.15C7.63,17.71 8.29,18.21 9.06,18.64L8.1,20.55L9.89,21.45L10.89,19.45L10.73,19.36C11.68,19.68 12.76,19.9 14,19.97V22H16V19.93C16.76,19.84 17.81,19.64 18.77,19.19L20.29,20.71L21.7,19.29L20.37,17.95C20.75,17.44 21,16.8 21,16M8.5,11A1.5,1.5 0 0,1 7,9.5A1.5,1.5 0 0,1 8.5,8A1.5,1.5 0 0,1 10,9.5A1.5,1.5 0 0,1 8.5,11M11,14A1,1 0 0,1 10,13A1,1 0 0,1 11,12A1,1 0 0,1 12,13A1,1 0 0,1 11,14M15.5,17A1.5,1.5 0 0,1 14,15.5A1.5,1.5 0 0,1 15.5,14A1.5,1.5 0 0,1 17,15.5A1.5,1.5 0 0,1 15.5,17Z"
              iconcolor=""
              iconsize=""
              indeterminate="false"
              inputvalue="false"
              isgroupactivatoritem="false"
              issingleselect="false"
              loading="false"
              primaryhighlight=""
              primarytext="menu item 2"
              secondaryhighlight=""
              secondarytext=""
              tertiaryhighlight=""
              tertiarytext=""
              tertiarytextclasses=""
            />
          </v-list-item-stub>
          
        </v-list-stub>
      </v-menu-stub>
      <!--v-if-->
      <!--v-if-->
      <evocon-v-button-stub
        class="ml-2"
        color="primary"
        disabled="false"
        icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        iconcolor=""
        text="Primary btn"
        textclass=""
        type="primary"
      />
    </div>
  </div>
  <v-card-stub
    border="false"
    class="px-2 py-1 mb-4"
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <settings-filter-bar-stub
      filterconfiguration="[object Map]"
      hideresetbtn="false"
      togglebtnitems=""
      togglebtnvalue="list"
    />
  </v-card-stub>
  
  
</div>
`;

exports[`SettingsOverviewWrapper > renders correctly with primary button disabled 1`] = `
<div
  class="full-width"
>
  <div
    class="d-flex align-center justify-space-between mb-4"
    id="settings-header"
    style="margin-left: 64px;"
  >
    <div
      class="d-flex align-center"
    >
      <span
        class="text-headline-large"
      >
        Header
      </span>
      
      
      
      
    </div>
    <div>
      
      
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <evocon-v-button-stub
        class="ml-2"
        color="primary"
        disabled="true"
        icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        iconcolor=""
        text="Primary btn"
        textclass=""
        type="primary"
      />
    </div>
  </div>
  <v-card-stub
    border="false"
    class="px-2 py-1 mb-4"
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <settings-filter-bar-stub
      filterconfiguration="[object Map]"
      hideresetbtn="false"
      togglebtnitems=""
      togglebtnvalue="list"
    />
  </v-card-stub>
  
  
</div>
`;

exports[`SettingsOverviewWrapper > renders correctly with secondary button 1`] = `
<div
  class="full-width"
>
  <div
    class="d-flex align-center justify-space-between mb-4"
    id="settings-header"
    style="margin-left: 64px;"
  >
    <div
      class="d-flex align-center"
    >
      <span
        class="text-headline-large"
      >
        Header
      </span>
      
      
      
      
    </div>
    <div>
      
      
      <!--v-if-->
      <!--v-if-->
      <evocon-v-button-stub
        color=""
        icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        iconcolor=""
        text="Secondary btn"
        textclass=""
        type="primary-light"
      />
      <evocon-v-button-stub
        class="ml-2"
        color="primary"
        disabled="false"
        icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        iconcolor=""
        text="Primary btn"
        textclass=""
        type="primary"
      />
    </div>
  </div>
  <v-card-stub
    border="false"
    class="px-2 py-1 mb-4"
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <settings-filter-bar-stub
      filterconfiguration="[object Map]"
      hideresetbtn="false"
      togglebtnitems=""
      togglebtnvalue="list"
    />
  </v-card-stub>
  
  
</div>
`;

exports[`SettingsOverviewWrapper > renders correctly without buttons 1`] = `
<div
  class="full-width"
>
  <div
    class="d-flex align-center justify-space-between mb-4"
    id="settings-header"
    style="margin-left: 64px;"
  >
    <div
      class="d-flex align-center"
    >
      <span
        class="text-headline-large"
      >
        Header
      </span>
      
      
      
      
    </div>
    <div>
      
      
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <v-card-stub
    border="false"
    class="px-2 py-1 mb-4"
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <settings-filter-bar-stub
      filterconfiguration="[object Map]"
      hideresetbtn="false"
      togglebtnitems=""
      togglebtnvalue="list"
    />
  </v-card-stub>
  
  
</div>
`;
